Generation with 2 patterns